--- a/_config_local.yml
+++ b/_config_local.yml
@@ -18,8 +18,8 @@ keywords: machine-learning, ml, deep-learning, reinforcement-learning, iclr  # a
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: iclr_favicon.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: '' # the base hostname & protocol for your site
-baseurl: /2025 # the subpath of your site, e.g. /blog/
+url: https://krafton-ai.github.io # the base hostname & protocol for your site
+baseurl: /blog_off-policy-grpo # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -178,16 +178,11 @@ keep_files:
 # Plug-ins
 plugins:
   - jekyll-archives
-  - jekyll-diagrams
-  - jekyll-email-protect
   - jekyll-feed
-  - jekyll-imagemagick
-  - jekyll-minifier
   - jekyll-paginate-v2
   - jekyll/scholar
   - jekyll-sitemap
   - jekyll-target-blank
-  - jekyll-twitter-plugin
   # - jemoji
 
 # Sitemap settings
@@ -198,13 +193,13 @@ defaults:
       sitemap: false
 
 # -----------------------------------------------------------------------------
-# Jekyll Minifier
+# Jekyll Minifier (disabled for GitHub Pages)
 # -----------------------------------------------------------------------------
 
-jekyll-minifier:
-  exclude: ['robots.txt']
-  uglifier_args:
-    harmony: true
+# jekyll-minifier:
+#   exclude: ['robots.txt']
+#   uglifier_args:
+#     harmony: true
 
 # -----------------------------------------------------------------------------
 # Jekyll Archives
@@ -261,32 +256,32 @@ more_authors_animation_delay: 10  # more authors are revealed on click using ani
 
 
 # -----------------------------------------------------------------------------
-# Responsive WebP Images
+# Responsive WebP Images (disabled for GitHub Pages)
 # -----------------------------------------------------------------------------
 
-imagemagick:
-  enabled: true # enables responsive images for your site (recomended, see https://github.com/alshedivat/al-folio/issues/537)
-  widths:
-    - 480
-    - 800
-    - 1400
-  input_directories:
-    - assets/img/
-  input_formats:
-    - ".jpg"
-    - ".jpeg"
-    - ".png"
-    - ".tiff"
-  output_formats:
-    webp: "-resize 800x"
+# imagemagick:
+#   enabled: true # enables responsive images for your site (recomended, see https://github.com/alshedivat/al-folio/issues/537)
+#   widths:
+#     - 480
+#     - 800
+#     - 1400
+#   input_directories:
+#     - assets/img/
+#   input_formats:
+#     - ".jpg"
+#     - ".jpeg"
+#     - ".png"
+#     - ".tiff"
+#   output_formats:
+#     webp: "-resize 800x"
 
 # -----------------------------------------------------------------------------
-# Jekyll Diagrams
+# Jekyll Diagrams (disabled for GitHub Pages)
 # -----------------------------------------------------------------------------
 
-jekyll-diagrams:
-    # configuration, see https://github.com/zhustec/jekyll-diagrams.
-    # feel free to comment out this section if not using jekyll diagrams.
+# jekyll-diagrams:
+#     # configuration, see https://github.com/zhustec/jekyll-diagrams.
+#     # feel free to comment out this section if not using jekyll diagrams.
 
 
 # -----------------------------------------------------------------------------
