--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,14 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.1'
+        ruby-version: '3.2'
         bundler-cache: true
         
     - name: Install dependencies
       run: |
         gem install bundler
+        bundle config set --local deployment 'true'
+        bundle config set --local path 'vendor/bundle'
         bundle install
         
     - name: Build site
