--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,13 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.2'
+        ruby-version: '3.4'
         bundler-cache: true
         
     - name: Install dependencies
       run: |
         gem install bundler
-        bundle config set --local deployment 'true'
-        bundle config set --local path 'vendor/bundle'
+        bundle config set --local deployment 'false'
         bundle install
         
     - name: Build site
