--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ footer_text: >
 keywords: machine-learning, ml, deep-learning, reinforcement-learning, iclr  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: iclr_favicon.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: krafton_favicon.png  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://krafton-ai.github.io # the base hostname & protocol for your site
 baseurl: /blog # the subpath of your site, e.g. /blog/
