--- a/_config_local.yml
+++ b/_config_local.yml
@@ -2,13 +2,13 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Krafton AI # the website title (if blank, full name will be used instead)
+title: Krafton AI Blog (Local) # the website title (if blank, full name will be used instead)
 first_name: Krafton
-middle_name: 
-last_name: AI
+middle_name: AI
+last_name: Blog
 email: 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Home to the 2025 ICLR Blogposts track
+  Home to the Krafton AI Blog (Local Development)
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -16,10 +16,10 @@ footer_text: >
 keywords: machine-learning, ml, deep-learning, reinforcement-learning, iclr  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: iclr_favicon.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: krafton_favicon.png  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://krafton-ai.github.io # the base hostname & protocol for your site
-baseurl: /blog_off-policy-grpo # the subpath of your site, e.g. /blog/
+url: http://0.0.0.0:8080 # the base hostname & protocol for your site (local development)
+baseurl: "" # the subpath of your site, e.g. /blog/ (empty for local development)
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -111,7 +111,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: #blogposts # blog_name will be displayed in your blog page
+blog_name: blogposts # blog_name will be displayed in your blog page
 blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
 blog_description: #Blog Posts
 permalink: /blog/:title/
