--- a/_config_local.yml
+++ b/_config_local.yml
@@ -53,7 +53,7 @@ navbar_fixed: true
 footer_fixed: true
 
 # Dimensions
-max_width: 1000px
+max_width: 1500px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -179,7 +179,7 @@ keep_files:
 plugins:
   - jekyll-archives
   - jekyll-feed
-  - jekyll-paginate-v2
+  - jekyll-paginate
   - jekyll/scholar
   - jekyll-sitemap
   - jekyll-target-blank
