--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: blogposts # blog_name will be displayed in your blog page
+blog_name: Blog Posts # blog_name will be displayed in your blog page
 blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
 blog_description: # Blog Posts
 permalink: /:title/
